chapter_kubernetes-introduction/manifests/test-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test
  name: test-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: test
  type: ClusterIP
